--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,15 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: Dockerfile
     container_name: yufung-backend
     restart: unless-stopped
-    ports:
-      - "8088:8088"
+    network_mode: host  # 使用host网络模式，可以直接访问宿主机网络
     environment:
       - TZ=Asia/Shanghai
     volumes:
       - ./logs:/app/logs
       - ./uploads:/app/uploads
-    networks:
-      - yufung-network
-    depends_on:
-      - mongodb
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8088/health"]
       interval: 30s
@@ -48,53 +43,6 @@ services:
       retries: 3
       start_period: 40s
 
-  # MongoDB数据库（如果需要在本地运行）
-  mongodb:
-    image: mongo:7.0
-    container_name: yufung-mongodb
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: yf2025
-      MONGO_INITDB_DATABASE: insurance_db
-      TZ: Asia/Shanghai
-    volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init:/docker-entrypoint-initdb.d
-    networks:
-      - yufung-network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Nginx反向代理（可选，用于生产环境）
-  nginx-proxy:
-    image: nginx:alpine
-    container_name: yufung-nginx-proxy
-    restart: unless-stopped
-    ports:
-      - "443:443"
-      - "80:80"
-    volumes:
-      - ./nginx-proxy.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    networks:
-      - yufung-network
-    depends_on:
-      - frontend
-      - backend
-    profiles:
-      - production
-
 networks:
   yufung-network:
-    driver: bridge
-
-volumes:
-  mongodb_data:
-    driver: local 
+    driver: bridge 
