--- a/Yufung-admin-front/nginx.conf
+++ b/Yufung-admin-front/nginx.conf
@@ -51,9 +51,9 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-        # API代理到后端
+        # API代理到后端（使用localhost，因为容器分别启动）
         location /api/ {
-            proxy_pass http://backend:8088/;
+            proxy_pass http://localhost:8088/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
