--- a/Yufung-admin-front/Dockerfile
+++ b/Yufung-admin-front/Dockerfile
@@ -4,11 +4,23 @@ FROM node:20-alpine AS builder
 # 设置工作目录
 WORKDIR /app
 
+# 设置npm使用国内镜像源
+RUN npm config set registry https://registry.npmmirror.com && \
+    npm config set disturl https://npmmirror.com/dist && \
+    npm config set sass_binary_site https://npmmirror.com/mirrors/node-sass/ && \
+    npm config set electron_mirror https://npmmirror.com/mirrors/electron/ && \
+    npm config set puppeteer_download_host https://npmmirror.com/mirrors && \
+    npm config set chromedriver_cdnurl https://npmmirror.com/mirrors/chromedriver && \
+    npm config set operadriver_cdnurl https://npmmirror.com/mirrors/operadriver && \
+    npm config set phantomjs_cdnurl https://npmmirror.com/mirrors/phantomjs && \
+    npm config set selenium_cdnurl https://npmmirror.com/mirrors/selenium && \
+    npm config set node_inspector_cdnurl https://npmmirror.com/mirrors/node-inspector
+
 # 复制package文件
 COPY package*.json ./
 
 # 安装所有依赖（包括开发依赖，因为构建需要）
-RUN npm install
+RUN npm install --no-audit --no-fund
 
 # 复制源代码
 COPY . .
