修复npm配置错误，使用.npmrc文件设置镜像源

--- a/Yufung-admin-front/.npmrc
+++ b/Yufung-admin-front/.npmrc
@@ -1,1 +1,4 @@
-legacy-peer-deps=true
+registry=https://registry.npmmirror.com
+sass_binary_site=https://npmmirror.com/mirrors/node-sass/
+electron_mirror=https://npmmirror.com/mirrors/electron/
+puppeteer_download_host=https://npmmirror.com/mirrors
