fix: 修改build脚本，确保使用正确的环境变量

--- a/Yufung-admin-front/package.json
+++ b/Yufung-admin-front/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "analyze": "cross-env ANALYZE=1 max build",
     "biome:lint": "npx @biomejs/biome lint",
-    "build": "max build",
+    "build": "cross-env NODE_ENV=production UMI_ENV=dev max build",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start:dev",
     "gh-pages": "gh-pages -d dist",
